objects/Key__c.object
<CustomObject>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Returned__c</fullName>
        <label>Date Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Code_Id__c</fullName>
        <formula>CASESAFEID(Key_Code__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Code Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Code</label>
        <referenceTo>Key_Code__c</referenceTo>
        <relationshipLabel>Keys</relationshipLabel>
        <relationshipName>Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Control_Number__c</fullName>
        <label>Key Control Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Core_Type__c</fullName>
        <formula>TEXT(Key_Code__r.Key_Core_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Core Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Information__c</fullName>
        <formula>Key_Code__r.Name &amp; &quot;-&quot; &amp; TEXT(Key_Control_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Notes__c</fullName>
        <label>Key Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Region_Id__c</fullName>
        <formula>Key_Code__r.Region__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Region Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Region__c</fullName>
        <formula>Key_Code__r.Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Return_Reason__c</fullName>
        <label>Key Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Replacement</fullName>
                </value>
                <value>
                    <fullName>Resource Status Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Safe_Id__c</fullName>
        <formula>Safe__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Set</label>
        <referenceTo>Key_Set__c</referenceTo>
        <relationshipLabel>Keys</relationshipLabel>
        <relationshipName>Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Status__c</fullName>
        <label>Key Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Held by Resource</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Needs Return</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safe_Name__c</fullName>
        <formula>Safe__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Safe Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Safe</label>
        <referenceTo>Safe__c</referenceTo>
        <relationshipLabel>Keys</relationshipLabel>
        <relationshipName>Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>